--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="icon" href="/img/ロゴ_PNG.webp">
-  <link rel="stylesheet" href="/css/reset.css">
-  <!-- <link rel="stylesheet" href="/css/style.css"> -->
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <!-- <link rel="stylesheet" href="./css/style.css"> -->
+  <link rel="stylesheet" href="./css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jQueryの読み込み -->
 </head>
 
