--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>会社HP</title>
+  <title>Portfolio__n.d</title>
   <!-- 日本語用 noto sans jp -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,7 @@
     <header class="header">
       <div class="header__company-info">
         <div class="header__logo">
-          <a href="./home.html"><img src="/img/ロゴ_PNG.webp" alt="会社ロゴ"></a>
+          <a href="./home.html"><img src="./img/ロゴ_PNG.webp" alt="会社ロゴ"></a>
         </div>
         <h1 class="header__company-name">有限会社 田里興業</h1>
       </div>
