fix: head内のbaseタグをコメントアウト

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <!--  GitHub Pages用 -->
-  <base href="https://nt-disk.github.io/Portfolio-nemoto.d/">
+  <!-- <base href="https://nt-disk.github.io/Portfolio-nemoto.d/"> -->
   <link rel="icon" href="/img/ロゴ_PNG.webp">
   <link rel="stylesheet" href="./css/reset.css">
   <!-- <link rel="stylesheet" href="./css/style.css"> -->
