fix: ヘッダーロゴ画像のファイル名を変更 - 元の名称に日本語が含まれていたためgithub上にアップできていなかった可能性があるため

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
   <!-- ヘッダー -->
   <header class="sub-page-header">
     <div class="header__logo">
-      <a href="./index.html"><img src="/img/ロゴ_PNG.webp" alt="会社ロゴ"></a>
+      <a href="./index.html"><img src="./img/logo.webp" alt="会社ロゴ"></a>
     </div>
     <button class="hum-btn btn__open-trigger">
       <span></span>
