--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header class="header">
       <div class="header__company-info">
         <div class="header__logo">
-          <a href="./index.html"><img src="img/ロゴ_PNG.webp" alt="会社ロゴ"></a>
+          <a href="./index.html"><img src="./img/logo.webp" alt="会社ロゴ"></a>
         </div>
         <h1 class="header__company-name">有限会社 田里興業</h1>
       </div>
