refactor: index.htmlと同様に、サブページのフッターを修正

--- a/recruit.html
+++ b/recruit.html
@@ -240,11 +240,10 @@
   <!-- ******************************* footer ******************************* -->
   <footer class="footer">
     <ul class="footer__ul">
-      <li class="footer__li"><a href="./about.html">About</a></li>
-      <li class="footer__li"><a href="./works.html">Works</a></li>
-      <li class="footer__li"><a href="./recruit.html">Recruit</a></li>
-      <li class="footer__li"><a href="./contact.html">Contact</a></li>
       <li class="footer__li"><a href="./privacy-policy.html">Privacy policy</a></li>
+      <li>
+        <small>&copy; Copyright 2025 有限会社 田里興業</small>
+      </li>
     </ul>
   </footer>
   <script src="./js/script.js"></script>
