--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@
   <div class="all-section__wrapper">
     <!-- ******************************* ヘッダー ******************************* -->
     <header class="header">
-      <div class="header__company-info">
-        <div class="header__logo">
-          <a href="./index.html"><img src="./img/logo.webp" alt="会社ロゴ"></a>
+      <div class="header__container">
+        <div class="header__company-info">
+          <div class="header__logo">
+            <a href="./index.html"><img src="./img/logo.webp" alt="会社ロゴ"></a>
+          </div>
+          <h1 class="header__company-name">有限会社 田里興業</h1>
         </div>
-        <h1 class="header__company-name">有限会社 田里興業</h1>
+        <button class="header__hum-btn btn__open-trigger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
       </div>
-      <button class="header__hum-btn btn__open-trigger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
     </header>
     <!-- ナビゲーション -->
     <nav class="nav">
