fix: aboutページのヘッダーがスクロールに追従しないバグを修正,且つsub-page__title要素を追加 - 画面幅よりも大きなimgが悪影響を及ぼしていたため削除

--- a/about.html
+++ b/about.html
@@ -70,6 +70,9 @@
       </div>
     </div>
   </nav><!-- ナビここまで -->
+  <div class="sub-page__title">
+    <h1>About</h1>
+  </div>
   <main>
     <section class="greeting">
       <div class="greeting__inner">
@@ -213,7 +216,7 @@
       </div>
     </section>
     <div class="under-flower">
-      <img src="./img/flower-under.webp" alt="花のイラスト">
+      <!-- <img src="./img/flower-under.webp" alt="花のイラスト"> -->
     </div>
   </main>
   <!-- ******************************* footer ******************************* -->
