--- a/recruit.html
+++ b/recruit.html
@@ -64,6 +64,9 @@
       </div>
     </div>
   </nav><!-- ナビここまで -->
+  <div class="sub-page__title">
+    <h1>Recruit</h1>
+  </div>
   <main>
     <section class="recruit">
       <div class="recruit__inner">
