--- a/works.html
+++ b/works.html
@@ -65,6 +65,9 @@
         </div>
       </div>
     </nav><!-- ナビここまで -->
+    <div class="sub-page__title">
+      <h1>Works</h1>
+    </div>
     <!-- ***************** main ***************** -->
     <main>
       <div class="works-page__inner">
