--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,11 +12,13 @@
   <!-- 日本語用 Shippori Mincho jp -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
   <!-- 日本語用 M PLUS Rounded 1c -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap"
+    rel="stylesheet">
   <!-- 英語用 Oswald -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,23 +26,16 @@
   <!-- 英語用 montserrat -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="icon" href="/img/ロゴ.png">
   <link rel="stylesheet" href="./css/reset.css">
   <!-- <link rel="stylesheet" href="./css/style.css"> -->
   <link rel="stylesheet" href="./css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jQueryの読み込み -->
-  <style>
-    /* footerにpositionとz-indexを設定 */
-    footer {
-      position: relative; /* 必須 */
-      z-index: 10; /* 他の要素より前面に表示されます */
-      background-color: lightgray;
-      padding: 20px;
-      text-align: center;
-    }
-  </style>
+
 </head>
+
 <body>
   <!-- ******************************* header ******************************* -->
   <header class="header">
@@ -75,13 +71,16 @@
       </div>
     </div>
   </nav><!-- ナビここまで -->
+  <div class="sub-page__title">
+    <h1>Contact</h1>
+  </div>
   <!-- ***************** 【おためし】Noway Form ***************** -->
-   <section>
-     <div class="contact_inner">
-       <iframe style="border:none;width:100%;" height="400px" src="https://www.noway-form.com/f/ba978380-6baf-43ca-9ad3-5040c98e4d71/embed" />
-     </div>
-   </section>
-
+  <!-- <section>
+    <div class="contact_inner">
+      <iframe style="border:none;width:100%;" height="400px"
+        src="https://www.noway-form.com/f/ba978380-6baf-43ca-9ad3-5040c98e4d71/embed" />
+    </div>
+  </section> -->
 
   <!-- ******************************* footer ******************************* -->
   <footer class="footer">
@@ -92,6 +91,7 @@
       </li>
     </ul>
   </footer>
-<script src="./js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
+
 </html>
