--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -65,6 +65,9 @@
       </div>
     </div>
   </nav><!-- ナビここまで -->
+  <div class="sub-page__title">
+    <h1>Privacy Policy</h1>
+  </div>
   <!-- ******************************* footer ******************************* -->
   <footer class="footer">
     <ul class="footer__ul">
