refactor: 不要なsectionを削除、および空白の調整

--- a/about.html
+++ b/about.html
@@ -86,6 +86,7 @@
         </div>
       </div>
     </section>
+    <div class="section-line"><hr></div>
     <section class="company">
       <div class="company__inner">
         <h2 class="company__title section-title">Company</h2>
@@ -160,54 +161,6 @@
           </div><!--company__right-->
         </div><!--company__left-right-->
       </div><!--company__inner-->
-    </section>
-    <section class="company">
-      <div class="company__inner">
-        <table>
-          <tbody>
-            <tr>
-              <th scope="row">社名</th>
-              <td>有限会社 田里興業</td>
-            </tr>
-            <tr>
-              <th scope="row">創業</th>
-              <td>1988年 6月</td>
-            </tr>
-            <tr>
-              <th scope="row">代表</th>
-              <td>下重千賀子</td>
-            </tr>
-            <tr>
-              <th scope="row">資本金</th>
-              <td>5,000,000円</td>
-            </tr>
-            <tr>
-              <th scope="row">所在地</th>
-              <td>〒144-0055 <br>東京都大田区仲六郷3-10-2</td>
-            </tr>
-            <tr>
-              <th scope="row">事業内容</th>
-              <td>左官工事</td>
-            </tr>
-            <tr>
-              <th scope="row">建築業許可</th>
-              <td>東京都知事 許可(般-23) <br>第146005号</td>
-            </tr>
-            <tr>
-              <th scope="row">tel</th>
-              <td>03-3733-2751</td>
-            </tr>
-            <tr>
-              <th scope="row">fax</th>
-              <td>03-3733-2752</td>
-            </tr>
-            <tr>
-              <th scope="row">mail</th>
-              <td>tasato-kogyo@ark.ocn.ne.jp</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
     </section>
   </main>
   <!-- ******************************* footer ******************************* -->
