--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio__n.d</title>
+  <title>PF_n.d</title>
   <!-- 日本語用 noto sans jp -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
     rel="stylesheet">
   <!--  GitHub Pages用 -->
   <!-- <base href="https://nt-disk.github.io/Portfolio-nemoto.d/"> -->
-  <link rel="icon" href="/img/ロゴ_PNG.webp">
+  <link rel="icon" href="/img/logo.webp">
   <link rel="stylesheet" href="./css/reset.css">
   <!-- <link rel="stylesheet" href="./css/style.css"> -->
   <link rel="stylesheet" href="./css/main.css">
