refactor: rectuitページの不要な画像を削除、余白の調整、不要なコメントの削除

--- a/recruit.html
+++ b/recruit.html
@@ -70,7 +70,7 @@
   <main>
     <section class="recruit">
       <div class="recruit__inner">
-        <h2 class="section-title sub-page__section-title">採用情報</h2>
+        <h2 class="section-title sub-page__section-title">募集要項</h2>
         <div class="recruit__txt">
           <p>おかげさまで多くのご依頼をいただいており、業務量が増加しております。そのため現在のスタッフだけでは今後対応しきれない状況が考えられ、新たに力を貸していただける方を募集しています。皆様のご応募をお待ちしております。
           </p>
@@ -190,9 +190,6 @@
         </ul>
       </div> <!-- inner -->
     </section>
-    <div class="flower-wall">
-      <img src="./img/flower-wall.webp" alt="">
-    </div>
     <section class="qa">
       <div class="qa__inner">
         <h2 class="section-title sub-page__section-title">FAQ</h2>
