style: html,p font-sizeの調整, body letter-spacingの調整 feat: ヘッダー会社名をリンク化、ナビにTopを追加 refactor: 施工事例の不要な画像をコメントアウト chore: 施工事例で利用予定の画像ファイル名を変更(日本語名だと読み込みエラーが起こるため)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="header__logo">
             <a href="./index.html"><img src="./img/logo.webp" alt="会社ロゴ"></a>
           </div>
-          <h1 class="header__company-name">有限会社 田里興業</h1>
+          <h1 class="header__company-name"><a href="./index.html">有限会社 田里興業</a></h1>
         </div>
         <button class="header__hum-btn btn__open-trigger">
           <span></span>
@@ -60,6 +60,7 @@
       <div class="nav__container">
         <div class="nav__list-wrap">
           <ul class="nav-list">
+            <li class="nav-item"><a href="./index.html">Top</a></li>
             <li class="nav-item"><a href="./about.html">About</a></li>
             <li class="nav-item"><a href="./works.html">Works</a></li>
             <li class="nav-item"><a href="./recruit.html">Recruit</a></li>
@@ -172,14 +173,24 @@
               </p>
               <!-- <p>スタンプのようにコンクリート床面に型押しする事により自然石やレンガ・タイル模様などの風合いを表現する工法です。</p> -->
             </div>
-            <div class="method__images">
+            <!-- <div class="method__images">
               <div class="method__img--01 fadeUpTrigger late">
-                <img src="./img/sutannpu-tatenaga.webp" alt="スタコン画像">
+                <img src="./img/stamp1.webp" alt="スタコン画像">
               </div>
               <div class="method__img--02 fadeUpTrigger">
-                <img src="./img/sitaji-tatenaga.webp" alt="下地画像">
+                <img src="./img/stamp2.webp" alt="下地画像">
               </div>
-            </div>
+            </div> -->
+            <!-- <div class="picture-frame">
+              <div class="picture-frame__nested-frame">
+                <div class="picture-frame__img img01">
+                  <img src="./img/stamp1.webp" alt="">
+                </div>
+                <div class="picture-frame__img img02">
+                  <img src="./img/stamp2.webp" alt="">
+                </div>
+              </div>
+            </div> -->
           </div>
           <div class="method__wrapper2">
             <div class="method__text--02 fadeUpTrigger">
@@ -238,7 +249,7 @@
     <!-- ******************************* footer ******************************* -->
     <footer class="footer">
       <ul class="footer__ul">
-        <li class="footer__li"><a href="./privacy-policy.html">Privacy policy</a></li>
+        <li class="footer__li"><a href="./privacy-policy.html">Privacy Policy</a></li>
         <li>
           <small>&copy; Copyright 2025 有限会社 田里興業</small>
         </li>
