--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
         <div class="header__logo">
           <a href="./index.html"><img src="./img/logo.webp" alt="会社ロゴ"></a>
         </div>
-        <h1 class="header__company-name">有限会社 田里興業</h1>
+        <h1 class="header__company-name"><a href="./index.html">有限会社 田里興業</a></h1>
       </div>
       <button class="header__hum-btn btn__open-trigger">
         <span></span>
@@ -57,6 +57,7 @@
     <div class="nav__container">
       <div class="nav__list-wrap">
         <ul class="nav-list">
+          <li class="nav-item"><a href="./index.html">Top</a></li>
           <li class="nav-item"><a href="./about.html">About</a></li>
           <li class="nav-item"><a href="./works.html">Works</a></li>
           <li class="nav-item"><a href="./recruit.html">Recruit</a></li>
@@ -166,7 +167,7 @@
   <!-- ******************************* footer ******************************* -->
   <footer class="footer">
     <ul class="footer__ul">
-      <li class="footer__li"><a href="./privacy-policy.html">Privacy policy</a></li>
+      <li class="footer__li"><a href="./privacy-policy.html">Privacy Policy</a></li>
       <li>
         <small>&copy; Copyright 2025 有限会社 田里興業</small>
       </li>
