refactor: トップページのsectionタイトル修正 - works, Sampleタイトルのスタイルを一括管理できるようにクラスを修正 - 中央寄せ→左寄せ、上下border削除 - Sampleにもサブタイトルを追加 - セクション名をSample→Productへ変更

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
               </p>
               <p class="about__text fadeUpTrigger">
                 弊社では仕上がりの美しさ、品質を大切にし、
-                『想い』が伝わる仕事を心がけております。
-                <!-- <br> -->
+                作り手の想いが伝わる仕事を心がけております。
+                <br>
                 また左官工事のクリエイティブな魅力を若い世代に継承すべく人材育成に注力いたします。
                 <br>
-                <br>
+                <!-- <br> -->
                 田里興業は伝統の技術と最新の工法を織り交ぜ、
                 左官業界の更なる発展に向け、
                 日々努力を積み重ねております。
@@ -117,24 +117,24 @@
               <img src="./img/AdobeStock_350061307_Preview 2.webp" alt="about画像">
             </div>
           </div>
-        </div>
+        </div><!-- aboutインナー -->
       </section>
       <!-- ******************************* work ******************************* -->
       <section class="works">
         <div class="works__inner1">
-          <div class="works__title--wrapper fadeUpTrigger">
+          <div class="section-title__wrapper fadeUpTrigger">
             <h2 class="works__title section-title">
               Works
             </h2>
-            <p class="works__subtitle">
+            <p class="section__subtitle">
               左官工事一式、承ります。
             </p>
           </div>
         </div>
-        <div class="works__inner2">
-          <div class="works__main-img fadeUpTrigger">
-            <img src="./img/DSC_0195 1.webp" alt="works__メイン画像">
-          </div>
+        <div class="works__main-img fadeUpTrigger">
+          <img src="./img/DSC_0195 1.webp" alt="works__メイン画像">
+        </div>
+        <div class="works__inner1">
           <div class="works__vertical-writing fadeUpTrigger late">
             <p>集合住宅<br>戸建住宅<br>商業施設<br>公共施設等<br>幅広く対応いたします。</p>
           </div>
@@ -163,9 +163,10 @@
       <!-- ******************************* method ******************************* -->
       <section class="method">
         <div class="method__inner">
-          <!-- <div class="method__title"> -->
-          <h2 class="method__title section-title fadeUpTrigger">Sample</h2>
-          <!-- </div> -->
+          <div class="section-title__wrapper">
+            <h2 class="method__title section-title fadeUpTrigger">Product</h2>
+            <p class="section__subtitle">施工事例紹介</p>
+          </div>
           <div class="method__wrapper1">
             <div class="method__text fadeUpTrigger">
               <p>
@@ -203,11 +204,11 @@
               <p>スタンプのようにコンクリート床面に型押しする事により自然石やレンガ・タイル模様などの風合いを表現する工法です。ニーズに合わせて景観を自由に創り出せます。</p>
               <p>スタンプのようにコンクリート床面に型押しする事により自然石やレンガ・タイル模様などの風合いを表現する工法です。ニーズに合わせて景観を自由に創り出せます。</p>
             </div>
-            <div class="method__img--03 fadeUpTrigger late">
-              <img src="./img/joripaddo-ver2.webp" alt="ジョリパッド画像">
-            </div>
           </div>
-        </div>
+          <div class="method__img--03 fadeUpTrigger late">
+            <img src="./img/joripaddo-ver2.webp" alt="ジョリパッド画像">
+          </div>
+        </div><!-- methodインナー -->
       </section>
       <!-- *********************** recruit-contact *********************** -->
       <section class="recruit-contact">
