refactor: index.htmlのproductクラス名を変更して命名規則を統一

--- a/index.html
+++ b/index.html
@@ -160,25 +160,25 @@
           </div>
         </div>
       </section>
-      <!-- ******************************* method ******************************* -->
-      <section class="method">
-        <div class="method__inner">
+      <!-- ******************************* Product ******************************* -->
+      <section class="product">
+        <div class="product__inner">
           <div class="section-title__wrapper">
-            <h2 class="method__title section-title fadeUpTrigger">Product</h2>
+            <h2 class="product__title section-title fadeUpTrigger">Product</h2>
             <p class="section__subtitle">施工事例紹介</p>
           </div>
-          <div class="method__wrapper1">
-            <div class="method__text fadeUpTrigger">
+          <div class="product__wrapper1">
+            <div class="product__text fadeUpTrigger">
               <p>
                 スタンプのようにコンクリート床面に型押しする事により自然石やレンガ・タイル模様などの風合いを表現する工法です。スタンプのようにコンクリート床面に型押しする事により自然石やレンガ・タイル模様などの風合いを表現する工法です。
               </p>
               <!-- <p>スタンプのようにコンクリート床面に型押しする事により自然石やレンガ・タイル模様などの風合いを表現する工法です。</p> -->
             </div>
-            <!-- <div class="method__images">
-              <div class="method__img--01 fadeUpTrigger late">
+            <!-- <div class="product__images">
+              <div class="product__img--01 fadeUpTrigger late">
                 <img src="./img/stamp1.webp" alt="スタコン画像">
               </div>
-              <div class="method__img--02 fadeUpTrigger">
+              <div class="product__img--02 fadeUpTrigger">
                 <img src="./img/stamp2.webp" alt="下地画像">
               </div>
             </div> -->
@@ -193,8 +193,8 @@
               </div>
             </div> -->
           </div>
-          <div class="method__wrapper2">
-            <div class="method__text--02 fadeUpTrigger">
+          <div class="product__wrapper2">
+            <div class="product__text--02 fadeUpTrigger">
               <p>いくつになっても凝り固まらず、<br>
                 自然に変化していくわたしと共に<br>
                 ゆるく変化できる家であってほしいから、<br>
@@ -205,10 +205,10 @@
               <p>スタンプのようにコンクリート床面に型押しする事により自然石やレンガ・タイル模様などの風合いを表現する工法です。ニーズに合わせて景観を自由に創り出せます。</p>
             </div>
           </div>
-          <div class="method__img--03 fadeUpTrigger late">
+          <div class="product__img--03 fadeUpTrigger late">
             <img src="./img/joripaddo-ver2.webp" alt="ジョリパッド画像">
           </div>
-        </div><!-- methodインナー -->
+        </div><!-- productインナー -->
       </section>
       <!-- *********************** recruit-contact *********************** -->
       <section class="recruit-contact">
