feat: - aboutページの挨拶文を修正し署名を追加 - サブページのセクションタイトルに副題を追加
style:
- サブページのページタイトルとセクションタイトルを中央寄せから左寄せへ変更
- セクションタイトルの位置をtext-indentで調整
- htmlのfont-sizeを62.5%へ変更（margin, paddingの調整を容易にするため）

refactor:
- htmlのfont-size変更に伴い、$font-size_baseを調整

--- a/about.html
+++ b/about.html
@@ -77,20 +77,33 @@
   <main>
     <section class="greeting">
       <div class="greeting__inner">
-        <h2 class="section-title sub-page__section-title">Greeting</h2>
+        <div class="greeting__title">
+          <p class="section__title__up">ごあいさつ</p>
+          <h2 class="section-title sub-page__section-title">Greeting</h2>
+        </div>
         <div class="greeting__wrap">
           <div class="greeting__txt">
             <p>
-              西の悪い魔女は望遠鏡になる一つ目で一行が近づくのを見つける。魔女は一行をズタズタに切り裂くため狼たちを送るが、ブリキの木こりが斧で殺す。魔女は一行の目を潰すため野生のカラスを送るが、カカシが彼らの首を折って殺す。魔女は一行を刺すため黒い蜂の群れを集めるが、カカシのわらがドロシー、ライオン、トトを隠し、ブリキには刺さらずに蜂は死ぬ。魔女はウィンキーの兵士たちを送るが、ライオンが直立すると恐れて引き返す。ついに魔女は黄金の冠の力を使い飛ぶ猿を呼び集め、ドロシー、トト、ライオン、カカシを捕まえ、ブリキの木こりをへこませる。魔女はドロシーの銀の靴を手に入れることを企て、ドロシーを自分の専属奴隷にしようとする。
+              昭和63年の創業以来、東京都大田区を拠点に、東京23区および神奈川県を中心に左官工事を手がけてまいりました。<br>
+              左官の技術は、建物の美しさと耐久性を支える重要な仕事です。私たちは、一つひとつの現場に真摯に向き合い、確かな技術と細部へのこだわりを大切にしながら、お客様にご満足いただける仕上がりを追求してきました。<br><br>
+              最後まで丁寧な施工を心がけ、品質の高い仕上がりをお届けするとい理念のもと基礎の下地施工から最新の仕上げまで、幅広い施工に対応しております。これからも培ってきた経験と技術を活かし、より良い施工を提供できるよう努力してまいります。<br><br>
+              お客様の理想を形にするために、全力でサポートいたしますので、左官工事のことならお気軽にご相談ください。
             </p>
+          </div>
+          <div class="signature">
+            <p>代表取締役 下重 千賀子</p>
           </div>
         </div>
       </div>
     </section>
-    <div class="section-line"><hr></div>
+    <div class="section-line">
+    </div>
     <section class="company">
       <div class="company__inner">
-        <h2 class="company__title section-title">Company</h2>
+        <div class="about-page__section-title__wrap">
+          <p class="section__title__up">会社概要</p>
+          <h2 class="company__title section-title">Company</h2>
+        </div>
         <div class="company__left-right">
           <div class="company__left">
             <ul class="company__contents--wrap1">
