--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           <div class="about__wrapper">
             <div class="about__contents">
               <!-- titleのクラスのスタイルは、読み込みmain.scssの読み込み順の結果、about__titleが優先される -->
+            <p class="section__title__up about__title__up">わたしたちについて</p>
               <h2 class="about__title section-title fadeUpTrigger">ABOUT</h2>
               <p class="about__description fadeUpTrigger">
                 今、再び注目を集めている『左官』<br>
@@ -109,7 +110,7 @@
               </p>
               <div class="button-more about__more fadeUpTrigger">
                 <a href="./about.html" class="button-more__link">
-                  <span class="button-more__text">View more</span>
+                  <span class="button-more__text">詳しく見る</span>
                   <span class="button-more__arrow">→</span>
                 </a>
               </div>
@@ -124,12 +125,10 @@
       <section class="works">
         <div class="works__inner">
           <div class="section-title__wrapper fadeUpTrigger">
+            <p class="section__title__up">施工事例</p>
             <h2 class="works__title section-title">
               Works
             </h2>
-            <p class="section__subtitle">
-              左官工事一式、承ります。
-            </p>
           </div>
         </div>
         <div class="works__main-img fadeUpTrigger">
@@ -144,7 +143,7 @@
           </div>
         </div>
         <div class="works__inner">
-          <h3 class="works__product">施工事例：ジョリパッド</h3>
+          <h3 class="works__product deco-title">施工事例：ジョリパッド</h3>
           <div class="picture-frame">
             <div class="picture-frame__nested-frame">
               <div class="picture-frame__img img01">
@@ -157,13 +156,13 @@
           </div>
           <div class="works__txt fadeUpTrigger">
             <p>
-              ジョリパット施工は、デザイン性と耐久性を兼ね備えた高品質な塗り壁材です。独特の質感と多彩な仕上げパターンで、住宅や商業施設の外壁・内装を美しく演出します。
+              ジョリパット施工は、デザイン性と耐久性を兼ね備えた高品質な塗り壁材を用いる施工です。独特の質感と多彩な仕上げパターンで、住宅や商業施設の外壁・内装を美しく演出します。<br>
               弊社では、熟練の左官職人が丁寧な施工を行い、お客様の理想の仕上がりを実現します。
             </p>
           </div>
           <div class="button-more works__more fadeUpTrigger">
-            <a href="./about.html" class="button-more__link">
-              <span class="button-more__text">View more</span>
+            <a href="./works.html" class="button-more__link">
+              <span class="button-more__text">詳しく見る</span>
               <span class="button-more__arrow">→</span>
             </a>
           </div>
@@ -187,7 +186,7 @@
               </p>
               <div class="button-more fadeUpTrigger">
                 <a href="./recruit.html" class="button-more__link">
-                  <span class="button-more__text">View more</span>
+                  <span class="button-more__text">詳しく見る</span>
                   <span class="button-more__arrow">→</span>
                 </a>
               </div>
