--- a/recruit.html
+++ b/recruit.html
@@ -73,7 +73,7 @@
       <div class="recruit__inner">
         <h2 class="section-title sub-page__section-title">募集要項</h2>
         <div class="recruit__txt">
-          <p>おかげさまで多くのご依頼をいただいており、業務量が増加しております。そのため現在のスタッフだけでは今後対応しきれない状況が考えられ、新たに力を貸していただける方を募集しています。皆様のご応募をお待ちしております。
+          <p>おかげさまで多くのご依頼をいただいており、業務量が増加しております。そのため現在のスタッフだけでは今後対応しきれない状況が考えられ、新たに力を貸していただける方を募集しています。ご応募をお待ちしております。
           </p>
         </div>
       </div><!-- recruit__inner -->
@@ -193,7 +193,7 @@
     </section>
     <section class="qa">
       <div class="qa__inner">
-        <h2 class="section-title sub-page__section-title">FAQ</h2>
+        <h2 class="section-title sub-page__section-title deco-title">FAQ</h2>
         <ul class="qa__block">
           <li class="qa__item">
             <button class="qa__head js-ac">何か用意する必要はありますか？</button>
