--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="about__wrapper">
             <div class="about__contents">
               <!-- titleのクラスのスタイルは、読み込みmain.scssの読み込み順の結果、about__titleが優先される -->
-            <p class="section__title__up about__title__up">わたしたちについて</p>
+              <p class="section__title__up about__title__up">わたしたちについて</p>
               <h2 class="about__title section-title fadeUpTrigger">ABOUT</h2>
               <p class="about__description fadeUpTrigger">
                 今、再び注目を集めている『左官』<br>
@@ -124,26 +124,36 @@
       <!-- ******************************* works ******************************* -->
       <section class="works">
         <div class="works__inner">
-          <div class="section-title__wrapper fadeUpTrigger">
+          <div class="fadeUpTrigger">
             <p class="section__title__up">施工事例</p>
             <h2 class="works__title section-title">
               Works
             </h2>
           </div>
         </div>
-        <div class="works__main-img fadeUpTrigger">
-          <img src="./img/DSC_0195 1.webp" alt="works__メイン画像">
-        </div>
-        <div class="works__inner">
+        <div class="works__top">
+          <div class="works__main-img fadeUpTrigger">
+            <img src="./img/DSC_0195 1.webp" alt="works__メイン画像">
+          </div>
           <div class="works__vertical-writing fadeUpTrigger late">
             <p>集合住宅<br>戸建住宅<br>商業施設<br>公共施設等<br>幅広く対応いたします。</p>
           </div>
+        </div>
+        <div class="works__inner">
           <div class="works__not-vertical-writing fadeUpTrigger">
             <p>集合住宅・戸建住宅・商業施設<br>公共施設など幅広く対応いたします。</p>
           </div>
         </div>
-        <div class="works__inner">
-          <h3 class="works__product deco-title">施工事例：ジョリパッド</h3>
+        <div class="works__inner works__tt">
+          <div class="works__t">
+            <h3 class="works__product__title deco-title">施工事例：ジョリパッド</h3>
+            <div class="works__txt fadeUpTrigger">
+              <p>
+                ジョリパット施工は、デザイン性と耐久性を兼ね備えた高品質な塗り壁材を用いる施工です。独特の質感と多彩な仕上げパターンで、住宅や商業施設の外壁・内装を美しく演出します。<br>
+                弊社では、熟練の左官職人が丁寧な施工を行い、お客様の理想の仕上がりを実現します。
+              </p>
+            </div>
+          </div> <!-- works__t -->
           <div class="picture-frame">
             <div class="picture-frame__nested-frame">
               <div class="picture-frame__img img01">
@@ -154,12 +164,8 @@
               </div>
             </div>
           </div>
-          <div class="works__txt fadeUpTrigger">
-            <p>
-              ジョリパット施工は、デザイン性と耐久性を兼ね備えた高品質な塗り壁材を用いる施工です。独特の質感と多彩な仕上げパターンで、住宅や商業施設の外壁・内装を美しく演出します。<br>
-              弊社では、熟練の左官職人が丁寧な施工を行い、お客様の理想の仕上がりを実現します。
-            </p>
-          </div>
+        </div> <!-- works__inner works__tt -->
+        <div class="works__inner">
           <div class="button-more works__more fadeUpTrigger">
             <a href="./works.html" class="button-more__link">
               <span class="button-more__text">詳しく見る</span>
