style: トップページpic-fのコードを簡素化

--- a/index.html
+++ b/index.html
@@ -154,15 +154,13 @@
               </p>
             </div>
           </div> <!-- works__t -->
-          <div class="picture-frame">
-            <div class="picture-frame__nested-frame">
-              <div class="picture-frame__img img01">
+          <div class="works__pic pic-f">
+              <!-- <div class="pic-f__img img01">
                 <img src="./img//14.webp" alt="">
-              </div>
-              <div class="picture-frame__img img02">
+              </div> -->
+              <div class="pic-f__img img02">
                 <img src="./img//13.webp" alt="">
               </div>
-            </div>
           </div>
         </div> <!-- works__inner works__tt -->
         <div class="works__inner">
